database dsn changes

--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = mysql+pymysql://root:root@database:3306/waitkue
+sqlalchemy.url = postgresql://waitkue_user:nxVnolHVKnoZpt8Ge9R1LNKXm17tPBLp@dpg-d10nbjumcj7s73bsf6pg-a/waitkue
 
 
 [post_write_hooks]
